# docs/openapi/specification.json
@@ -660,6 +660,112 @@
         "summary": "view treasury balance on a chain",
         "tags": ["Treasury Balance"]
       }
+    },
+    "/api/v1/analytics/nusd/price": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "arbitrum": {
+                      "type": "number",
+                      "format": "boolean"
+                    },
+                    "avalanche": {
+                      "type": "number",
+                      "format": "boolean"
+                    },
+                    "bsc": {
+                      "type": "number",
+                      "format": "boolean"
+                    },
+                    "fantom": {
+                      "type": "number",
+                      "format": "boolean"
+                    },
+                    "harmony": {
+                      "type": "number",
+                      "format": "boolean"
+                    },
+                    "polygon": {
+                      "type": "number",
+                      "format": "boolean"
+                    }
+                  },
+                  "example": {
+                    "arbitrum": 1.0011167756727486,
+                    "avalanche": 1.0028641935641684,
+                    "bsc": 1.0025708033110725,
+                    "fantom": 1.001627324577733,
+                    "harmony": 1.0005758175665005,
+                    "polygon": 1.0032059899444061
+                  }
+                }
+              }
+            },
+            "description": "Successful response"
+          }
+        },
+        "summary": "view nUSD virtual price on all chains",
+        "tags": ["nUSD"]
+      }
+    },
+    "/api/v1/analytics/nusd/price/{chain}": {
+      "get": {
+        "parameters": [
+          {
+            "in": "path",
+            "name": "chain",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "arbitrum",
+                "bsc",
+                "polygon",
+                "avalanche",
+                "harmony",
+                "fantom"
+              ]
+            }
+          },
+          {
+            "in": "query",
+            "name": "block",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "description": "can be negative to indicate a block backwards since the latest block."
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {
+                    "type": "number",
+                    "format": "float"
+                  },
+                  "example": {
+                    "arbitrum": 1.0011167756727486
+                  }
+                }
+              }
+            },
+            "description": "Successful response"
+          }
+        },
+        "summary": "view nUSD virtual price for a chain",
+        "tags": ["nUSD"]
+      }
     }
   }
 }
